--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using BookStore
-@using BookStore.Models
+﻿@using BooksStore
+@using BooksStore.Models
+@using BooksStore.Models.Book
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
