--- a/Views/Book/All.cshtml
+++ b/Views/Book/All.cshtml
@@ -10,21 +10,22 @@
 }
 else
 {
-    for (int i = 0; i < Model.Count(); i++)
-    {
-        <div class="row">
-            <div class="card-header">
-                <div class="col-lg-6 mb-4">
+    <div class="container">
+        <div class="row card-header">
+            @for (int i = 0; i < Model.Count(); i++)
+            {
+                <div class="col col-md-3">
                     <div class="card" style="width: 18rem;">
                         <img src="@Model[i].ImageUrl" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">@Model[i].Title</h5>
-                            <p class="card-text">@Model[i].Description</p>
-                            <a href="#" class="btn btn-primary">View More</a>
+                            <p class="card-text">@Model[i].AuthorName</p>
+                            <h4 class="card-text">@Model[i].Price lv.</h4>
+                            <a asp-controller="Book" asp-action="Details" asp-route-id="@Model[i].Id" class="btn btn-primary">Details</a>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
         </div>
-    }
+    </div>
 }
