--- a/Views/Book/ByGenre.cshtml
+++ b/Views/Book/ByGenre.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<BookViewModel>
 
 @{
-    ViewBag.Title = "All Books";
+    ViewBag.Title = "Books by category";
 }
 
 <partial name="_ViewPartial" model="@Model" />
