--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -11,15 +11,18 @@
                 <img src="@Model.ImageUrl" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">@Model.Title</h5>
-                    <p class="card-text">@Model.AuthorName</p>
+                    <p class="text-secondary">@Model.AuthorName</p>
                     <h4 class="card-text">@Model.Price lv.</h4>
                 </div>
             </div>
         </div>
         <div class="col col-md-9">
-            <h5>Genre: @Model.GenreName</h5>
-            <h5>Year Published: @Model.YearPublished y.</h5>
-            <h5>Description: @Model.Description</h5>
+            <h5>Genre:</h5>
+            <h6 class="text-secondary">@Model.GenreName</h6><hr />
+            <h5>Year Published:</h5>
+            <h6 class="text-secondary">@Model.YearPublished</h6><hr />
+            <h5>Description:</h5>
+            <h6 class="text-secondary">@Model.Description</h6>
             <hr />
             <a asp-controller="Book" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger float-end m-2">Delete</a>
             <a asp-controller="Book" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning float-end m-2">Edit</a>
