--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome to the world of books... </h1>
         <hr class="my-4">
-        <p>There are no books in the system currently available so why don't you just add one?</p>
+        <p>There are no books in the system currently available, so why don't you just add one?</p>
         <a asp-controller="Book" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add Book</a>
     </div>
 }
